--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="div2">
     <h2>AGRICULTURA 4.0</h2>
     <div class="img-flex-container">
-      <img src="agricultura_4.0_capa.jpg" alt="Agricultura 4.0">
+      <img src="cultura1.jpeg" alt="Agricultura 4.0">
       <div class="img-texto texto-div2">
         <p>A Agricultura 4.0 representa a revolução digital no campo...</p>
       </div>
