--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="div1">
     <h2>AGRICULTURA DE PRECISÃO</h2>
     <div class="img-flex-container">
-      <img src="agricultura_moderna.jpg" alt="agricultura de precisão">
+      <img src="download.jpeg" alt="agricultura de precisão">
       <div class="img-texto texto-div1">
         <p>A agricultura de precisão é um conjunto de tecnologias aplicadas ao campo...</p>
       </div>
@@ -88,7 +88,7 @@
   <div class="div3">
     <h2>FUTURO DA AGRICULTURA</h2>
     <div class="img-flex-container">
-      <img src="futuro_agricultura.jpg" alt="Futuro da Agricultura">
+      <img src="123.jpeg" alt="Futuro da Agricultura">
       <div class="img-texto texto-div3">
         <p>O futuro da agricultura está cada vez mais conectado à inovação...</p>
       </div>
@@ -99,7 +99,7 @@
   <div class="div4">
     <h2>MODERNIZAÇÃO DO CAMPO</h2>
     <div class="img-flex-container">
-      <img src="moderno_2025.jpg" alt="Modernização do Campo">
+      <img src="321.jpeg" alt="Modernização do Campo">
       <div class="img-texto texto-div4">
         <p>Modernização do campo com máquinas, irrigação automatizada...</p>
       </div>
@@ -110,7 +110,7 @@
   <div class="div5">
     <h2>NOVAS TECNOLOGIAS AGRÍCOLAS</h2>
     <div class="img-flex-container">
-      <img src="tecnologia_agricultura.jpg" alt="Novas Tecnologias Agrícolas">
+      <img src="cultura.jpeg" alt="Novas Tecnologias Agrícolas">
       <div class="img-texto texto-div5">
         <p>Drones, sensores e softwares estão revolucionando o campo...</p>
       </div>
